--- a/blog.html
+++ b/blog.html
@@ -1,69 +1,170 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-reboot.min.css">
   <title>Site</title>
 </head>
 <body>
-  <link href="header.html" rel="stylesheet">
-<div class="header">
+  <div class="header-blog">
     <div class="container"> 
-    <div class="header__label"><img src="../img/Logo.png"></div>
-    <div class="header__map header__common"><a class="header__map header__common" href="index.html" class="header__map header__common">Главная</a>
-    <a class="header__common" href="#">История обо мне</a>
-    <a class="header__common" href="#">Подробнее обо мне</a>
-    <a class="header__common" href="#">Контакты</a>
-    <!-- <a class="header__common" href="#">Моя вторая страница</a> -->
-  </div>
-  </div>
-  </div>
+       <div class="header-blog__wrapper">
+          <div class="header-blog__label"><img src="../img/logo.png" class="img-logo"></div>
+          <div class="nav__phone-border1"></div>
+          <div class="hhhhh">
+          <div class="nav">
+               <div class="img-menu"><img src="../img/menu.png"></div>
+             <a class="nav__item" href="index.html">Главная</a>
+             <a class="nav__item" href="blog.html">Мой блог</a>
+             <a class="nav__item" href="myblog.html">Подробнее обо мне</a>
+          </div>
+         </div>
+        </div>
+    </div>
+</div>
   <a name="info"></a>
-<div class="infoblog">
+<div class="infobox-blog">
     <div class="container">
-        <h1 class="infoblog__title">МОЙ БЛОГ</h1>
-        <p class="infoblog__headline">КАК КРУТО УЧИТЬСЯ В DL ACADEMY</p>
-        <p><img src="/img/infoblog_1.png"></p>
-        <p class="infoblog__description">
-        Равным образом консультация с профессионалами из IT играет важную роль в формировании
-        направлений прогрессивного развития. Не следует, однако,
-        забывать о том, что постоянное информационно-техническое обеспечение нашей
-        деятельности играет важную роль в формировании модели развития? С другой 
-        стороны новая модель организационной деятельности напрямую зависит от ключевых 
-        компонентов планируемого обновления. Практический опыт показывает, что курс на 
-        социально-ориентированный национальный проект способствует подготовке и реализации
-        форм воздействия.
+        <h1 class="infobox-blog__title">
+            ОБО МНЕ
+        </h1>
+    <div class="infobox-blog__wrapper">
+        <img class="infobox-blog__photo"src="/img/photo.png">
+    <div class="infobox-blog-block">
+        <p class="infobox-blog__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum distinctio
+            quasi culpa eveniet assumenda quia qui molestiae est ea odio quos voluptatibus 
+            perspiciatis, ipsam impedit tempore ducimus omnis deserunt adipisci inventore dicta 
+            consectetur, reiciendis fugiat ad! Eum excepturi accusantium amet odio corporis? Odio 
+            dignissimos repudiandae vero sapiente voluptatum laboriosam fuga quidem quos, nostrum voluptate, 
+            qui recusandae commodi. Aliquid tenetur repellat velit assumenda sapiente aspernatur ratione, 
+            error labore pariatur cum architecto debitis odio mollitia unde officiis distinctio quia quam, 
+            voluptas quidem quasi dolorum, repudiandae obcaecati. Veniam voluptatibus dolorum iste molestiae 
+            repellat officiis quibusdam recusandae sequi cupiditate, sit corrupti! Illo, esse quibusdam?
         </p>
-        <p class="infoblog__date">
-        21.06.2019г.
-        </p>
-        <div class="infoblog__border"></div>
-        <p class="infoblog__headline">Я ОЧЕНЬ ЛЮБЛЮ СВОЕ ХОББИ</p>
-        <p><img src="/img/infoblog_2.png"></p>
-        <p class="infoblog__description">
-        Повседневная практика показывает, что сложившаяся 
-        структура организации играет важную роль в формировании ключевых компонентов 
-        планируемого обновления. Равным образом социально-экономическое развитие в 
-        значительной степени обуславливает создание экономической целесообразности 
-        принимаемых решений. Практический опыт показывает, что рамки и место обучения 
-        кадров играет важную роль в формировании соответствующих условий активизации. С 
-        другой стороны постоянный количественный рост и сфера нашей активности в значительной
-        степени обуславливает создание направлений прогрессивного развития. Равным образом
-        социально-экономическое развитие позволяет оценить значение всесторонне 
-        сбалансированных нововведений.
-        Разнообразный и богатый опыт сложившаяся структура организации играет важную роль
-        в формировании форм воздействия! Разнообразный и богатый опыт сложившаяся структура 
-        организации играет важную роль в формировании новых предложений?
-        </p>
+        <a href="myblog.html"class="button">
+            ПОДРОБНЕЕ
+        </a>
+    </div>
+    </div>
     </div>
 </div>
 
-  <div class="footer">
+  <a name="info"></a>
+<div class="card-blog">
     <div class="container">
-        <div class="footer__site "><p>© 2019, ducker-life.com</p></div>
+        <h1 class="article__title">МОЙ БЛОГ</h1>
+        <div class="card-blog-article">
+            <div class="k">
+                <div class="card">
+                    <img class="card__img"src="/img/article.png">
+                        <div class="card__text">
+                            <h2 class=card__title>СЕГОДНЯ ХОДИЛ В КЛУБ ЗАРЯ</h2>
+                            <P class="card__article">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Illum distinctio quasi culpa eveniet assumenda quia qui molestiae est ea odio 
+                                quos voluptatibus perspiciatis, ipsam impedit tempore ducimus omnis deserunt 
+                                adipisci inventore dicta consectetur...
+                            </P>
+                        </div>
+                        <div class="card__box">
+                                <a href="#"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
+                                <div class="card__date">26.06.2019
+                                </div>
+                        </div>
+                </div>
+            </div>
+            <div class="k">
+                <div class="card">
+                    <img class="card__img"src="/img/article.png">
+                        <div class="card__text">
+                            <h2 class=card__title>СЕГОДНЯ ХОДИЛ В КЛУБ ЗАРЯ</h2>
+                            <p class="card__article">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Illum distinctio quasi culpa eveniet assumenda quia qui molestiae est ea odio 
+                                quos voluptatibus perspiciatis, ipsam impedit tempore ducimus omnis deserunt 
+                                adipisci inventore dicta consectetur...</p>
+                        </div>
+                        <div class="card__box">
+                            <a href="#"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
+                            <div class="card__date">26.06.2019
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="k">
+                <div class="card">
+                    <img class="card__img"src="/img/article.png">
+                        <div class="card__text">
+                            <h2 class=card__title>СЕГОДНЯ ХОДИЛ В КЛУБ ЗАРЯ</h2>
+                            <p class="card__article">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Illum distinctio quasi culpa eveniet assumenda quia qui molestiae est ea odio 
+                                quos voluptatibus perspiciatis, ipsam impedit tempore ducimus omnis deserunt 
+                                adipisci inventore dicta consectetur...</p>
+                        </div>
+                        <div class="card__box">
+                            <a href="#"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
+                            <div class="card__date">26.06.2019
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+
+    <div class="button-allnews">
+        <a href="allnews.html"class="button__3">ПОСМОТРЕТЬ ВСЕ НОВОСТИ</a>
+    </div>
     </div>
 </div>
 
+
+  <a name="contacts-blog"></a>
+<div class="contacts-blog">
+    <div class="container">
+        <div class="contacts-blog__block">
+        <h2 class="contacts-blog__title">КОНТАКТЫ</h2>
+        <div class="social-contacts">
+            <div class="social-contacts__all">
+                <div class="social-contacts__vk-sprite">
+                </div>
+            </div>
+            <div class="social-contacts__all">
+                <div class="social-contacts__inst-sprite">
+                </div>
+            </div>
+            <div class="social-contacts__all">
+                <div class="social-contacts__tel-sprite">
+                </div>
+            </div>
+            <div class="social-contacts__all">
+                <div class="social-contacts__email-sprite">
+                </div>
+            </div>
+            <div class="social-contacts__call">
+                <div class="social-contacts__call-sprite">
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+</div>
+
+  <div class="footer-blog">
+    <div class="container">
+        <div class="footer-blog__wrapper"> 
+                <div class="nav">
+                        <a class="nav__item" href="index.html">Главная</a>
+                        <a class="nav__item" href="myblog.html">Мой блог</a>
+                        <a class="nav__item" href="#">Подробнее обо мне</a>
+                </div>
+                <div class="footer-site">
+                        © 2019, my-site.com
+                </div>
+               </div>
+           </div>
+       </div>
+       
+  
+  
 </body>
 <script src="script.js"></script>
 </html>
