--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-reboot.min.css">
   <title>Site</title>
@@ -8,12 +9,11 @@
 <body>
   <div class="header">
   <div class="container"> 
-  <div class="header__label"><img src="../img/Logo.png"></div>
-  <div class="header__map header__common"><a class="header__map header__common" href="" class="header__map header__common">Главная</a>
-  <a class="header__common" href="#info">История обо мне</a>
-  <a class="header__common" href="blog.html">Мой блог</a>
+    <div class="header__label"><img src="../img/Logo.png"></div>
+      <div class="header__map header__common"><a class="header__map header__common" href="" class="header__map header__common">Главная</a>
+        <a class="header__common" href="#info">История обо мне</a>
+        <a class="header__common" href="blog.html">Мой блог</a>
   <a class="header__common" href="#contacts">Контакты</a>
-  <!-- <a class="header__common" href="#">Моя вторая страница</a> -->
 </div>
 </div>
 </div>
