--- a/allnews.html
+++ b/allnews.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-reboot.min.css">
   <title>Site</title>
@@ -12,6 +13,8 @@
        <div class="header-blog__wrapper">
           <div class="header-blog__label"><img src="../img/logo.png" class="img-logo"></div>
           <div class="nav__phone-border1"></div>
+          <div class="ghg"></div>
+          
           <div class="hhhhh">
           <div class="nav">
                <div class="img-menu"><img src="../img/menu.png"></div>
