--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-reboot.min.css">
   <title>Site</title>
@@ -133,18 +133,22 @@
             <div class="social-contacts__all">
                 <div class="social-contacts__vk-sprite">
                 </div>
+                <div class="social-contacts__text-vk"></div>
             </div>
             <div class="social-contacts__all">
                 <div class="social-contacts__inst-sprite">
                 </div>
+                <div class="social-contacts__text-inst"></div>
             </div>
             <div class="social-contacts__all">
                 <div class="social-contacts__tel-sprite">
                 </div>
+                <div class="social-contacts__text-tel"></div>
             </div>
             <div class="social-contacts__all">
                 <div class="social-contacts__email-sprite">
                 </div>
+                <div class="social-contacts__text-email"></div>
             </div>
             <div class="social-contacts__call">
                 <div class="social-contacts__call-sprite">
