--- a/detail.html
+++ b/detail.html
@@ -1,7 +1,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-reboot.min.css">
   <title>Site</title>
