--- a/allnews.html
+++ b/allnews.html
@@ -157,8 +157,8 @@
         <div class="footer-blog__wrapper"> 
                 <div class="nav">
                         <a class="nav__item" href="index.html">Главная</a>
-                        <a class="nav__item" href="myblog.html">Мой блог</a>
-                        <a class="nav__item" href="#">Подробнее обо мне</a>
+                        <a class="nav__item" href="blog.html">Мой блог</a>
+                        <a class="nav__item" href="myblog.html">Подробнее обо мне</a>
                 </div>
                 <div class="footer-site">
                         © 2019, my-site.com
