--- a/blog.html
+++ b/blog.html
@@ -130,26 +130,37 @@
         <div class="contacts-blog__block">
         <h2 class="contacts-blog__title">КОНТАКТЫ</h2>
         <div class="social-contacts">
+
             <div class="social-contacts__all">
-                <div class="social-contacts__vk-sprite">
-                </div>
-                <div class="social-contacts__text-vk"></div>
+                <div class="block_text">
+                    <div class="social-contacts__vk-sprite">
+                    </div>
+                <div class="social-contacts__text">Перейти в контакт</div>
+            </div>
+
             </div>
             <div class="social-contacts__all">
-                <div class="social-contacts__inst-sprite">
+                <div class="block_text">
+                        <div class="social-contacts__inst-sprite">
+                        </div>
+                    <div class="social-contacts__text">Перейти в инстаграм</div>
                 </div>
-                <div class="social-contacts__text-inst"></div>
             </div>
             <div class="social-contacts__all">
-                <div class="social-contacts__tel-sprite">
-                </div>
-                <div class="social-contacts__text-tel"></div>
+                <div class="block_text">
+                    <div class="social-contacts__tel-sprite">
+                    </div>
+                <div class="social-contacts__text">Обратная связь</div>
+            </div>
             </div>
             <div class="social-contacts__all">
-                <div class="social-contacts__email-sprite">
+                <div class="block_text">
+                    <div class="social-contacts__email-sprite">
+                    </div>
+                    <div class="social-contacts__text">Связаться по email</div>
                 </div>
-                <div class="social-contacts__text-email"></div>
             </div>
+
             <div class="social-contacts__call">
                 <div class="social-contacts__call-sprite">
                 </div>
@@ -164,8 +175,8 @@
         <div class="footer-blog__wrapper"> 
                 <div class="nav">
                         <a class="nav__item" href="index.html">Главная</a>
-                        <a class="nav__item" href="myblog.html">Мой блог</a>
-                        <a class="nav__item" href="#">Подробнее обо мне</a>
+                        <a class="nav__item" href="blog.html">Мой блог</a>
+                        <a class="nav__item" href="myblog.html">Подробнее обо мне</a>
                 </div>
                 <div class="footer-site">
                         © 2019, my-site.com
